--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -7,7 +7,6 @@
 
   <title>Mike Busch</title>
   <link rel="stylesheet" href="/stylesheets/reset.css" type="text/css" media="all" />
-  <link rel="stylesheet" href="/stylesheets/themes/base/ui.all.css" type="text/css" media="all" />
   <link rel="stylesheet" href="/stylesheets/homepage.css" type="text/css" media="all" />
   <script src="/javascripts/jquery.min.js" type="text/javascript"></script>
   <script src="/javascripts/jquery-ui.min.js" type="text/javascript"></script>
@@ -15,27 +14,29 @@
 </head>
 <body>
   <div id="container" class="vcard">
-    <h1><a class="fn url" href="http://mikelikesbikes.com">Mike Busch</a></h1>
-    <h2 class="note">I am a <em>software engineer</em> in Columbus, Ohio. Here is a little bit more about me.</h2>
-    <div id="tabs">
-      <ul>
-          <li><a href="#elsewhere"><span>Elsewhere</span></a></li>
-          <li><a href="#contact"><span>Contact</span></a></li>
-          <li><a href="#resume"><span>Resume</span></a></li>
-      </ul>
-      <div id="elsewhere">
-        <h2>Elsewhere</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-      </div>
-      <div id="contact">
-        <h2>Contact</h2>
-        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
-        <div>Email:
-          <span class="email"><a href="mailto:mike@mikelikesbikes.com">mike@mikelikesbikes.com</a></span>
+    <div id="wrap">
+      <h1><a class="fn url" href="http://mikelikesbikes.com">Mike Busch</a></h1>
+      <h2 class="note">I am a <em>web developer</em> in Columbus, Ohio. Here is a little bit more about me.</h2>
+      <div id="tabs">
+        <ul class="nav">
+            <li><a href="#contact"><span>Contact</span></a></li>
+            <li><a href="#resume"><span>Resume</span></a></li>
+        </ul>
+        <div id="contact">
+          <ul>
+            <li><a href="mailto:mike@mikelikesbikes.com" title="!">mike@mikelikesbikes.com</a></li>
+            <li><a href="http://twitter.com/mikelikesbikes" title="I tweet a lot!">twitter.com/mikelikesbikes</a></li>
+            <li><a href="http://www.linkedin.com/in/michaelbusch" title="I network on LinkedIn!">linkedin.com/in/michaelbusch</a></li>
+            <li><a href="http://mikelikesbikes.com" title="I occassionally blog.">mikelikesbikes.com/blog</a></li>
+            <li><a href="http://delicious.com/mikelikesbikes" title="I love reading!">delicious.com/mikelikesbikes</a></li>
+          </ul>
+        </div>
+        <div id="resume">
+          <%= render :partial => 'home/resume' %>
         </div>
       </div>
-      <div id="resume">
-        <%= render :partial => 'home/resume' %>
+      <div id="elsewhere">
+
       </div>
     </div>
     <div id="footer">
