--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -52,8 +52,8 @@ a img, input[type="image"] { border: none; }
 
 body {
   background:#FFF;
-  font-family:"Lucida Grande", Arial, sans-serif;
-  color:#333;
+  color:#333333;
+  font:1em/1.5 "Palatino Linotype","Book Antiqua",Palatino,Georgia,"Times New Roman",times,serif;
 }
 
 h1 {
