tabs z-index fixed

--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -19,8 +19,8 @@
       <h2 class="note">I am a <em>web developer</em> in Columbus, Ohio. Here is a little bit more about me.</h2>
       <div id="tabs">
         <ul class="nav">
-            <li><a href="#contact"><span>Contact</span></a></li>
-            <li><a href="#resume"><span>Resume</span></a></li>
+            <li><a href="#contact">Contact</a></li>
+            <li><a href="#resume">Resume</a></li>
         </ul>
         <div id="contact">
           <ul>
@@ -40,7 +40,7 @@
       </div>
     </div>
     <div id="footer">
-      &copy; <a href="http://mikelikesbikes.com/">Mike Busch</a> 2009
+      &copy; <a href="http://mikelikesbikes.com/">Mike Busch</a> <%= Date.today.year %>
     </div>
   </div>
 
