added contact icons

--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -66,7 +66,7 @@ body {
 }
 
 .nav .ui-tabs-selected a {
-  z-index:30;
+  z-index:auto;
   background: #fdf8f4;
   box-shadow: none;
   -moz-box-shadow: none;
@@ -103,7 +103,7 @@ a:hover {
 h1 {
   font-size: 2.5em;
   line-height: 1em;
-  margin: 1.111em 0 .3em;
+  margin:0 0 .3em;
   font-weight: bold;
 }
 
@@ -205,12 +205,45 @@ dt {
 }
 
 /* social media icons */
-/*a[href^=mailto] {
+a[href^=mailto] {
   color:blue;
 }
 
-a[href*=delicious] {
-  background:url(/images/icons/delicious.png) no-repeat;
-  padding:20px;
+#contact a[href] {
+  text-indent:-9999px;
+  margin-right:16px;
+  width:32px;
+  height:32px;
+  border-bottom:0;
   display:block;
-}*/
+}
+
+#contact li {
+  display:inline-block;
+}
+
+#contact a[href^=mailto] {
+  background:url(/images/icons/envelope.png) no-repeat top left;
+  width:49px;
+}
+
+#contact a[href*=delicious] {
+  background:url(/images/icons/delicious.png) no-repeat top left;
+}
+
+#contact a[href*=linkedin] {
+  background:url(/images/icons/linkedin.png) no-repeat top left;
+}
+
+#contact a[href*=twitter] {
+  background:url(/images/icons/twitter.png) no-repeat top left;
+}
+
+#contact a[href^=http][href*='mikelikesbikes.com'] {
+  background:url(/images/icons/rss.png) no-repeat top left;
+}
+
+#contact a[href*=github] {
+  background:url(/images/icons/github.png) no-repeat top left;
+}
+
