--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -24,11 +24,12 @@
         </ul>
         <div id="contact">
           <ul>
-            <li><a href="mailto:mike@mikelikesbikes.com" title="!">mike@mikelikesbikes.com</a></li>
-            <li><a href="http://twitter.com/mikelikesbikes" title="I tweet a lot!">twitter.com/mikelikesbikes</a></li>
-            <li><a href="http://www.linkedin.com/in/michaelbusch" title="I network on LinkedIn!">linkedin.com/in/michaelbusch</a></li>
-            <li><a href="http://mikelikesbikes.com" title="I occassionally blog.">mikelikesbikes.com/blog</a></li>
-            <li><a href="http://delicious.com/mikelikesbikes" title="I love reading!">delicious.com/mikelikesbikes</a></li>
+            <li><a href="mailto:mike@mikelikesbikes.com" title="I answer email.">mike@mikelikesbikes.com</a></li>
+            <li><a href="http://twitter.com/mikelikesbikes" title="I tweet frequently.">twitter.com/mikelikesbikes</a></li>
+            <li><a href="http://www.linkedin.com/in/michaelbusch" title="I network with peers.">linkedin.com/in/michaelbusch</a></li>
+            <li><a href="http://mikelikesbikes.com" title="I blog once in a while.">mikelikesbikes.com/blog</a></li>
+            <li><a href="http://delicious.com/mikelikesbikes" title="I reading lots of news.">delicious.com/mikelikesbikes</a></li>
+            <li><a href="http://github.com/mikelikesbikes" title="I code in public.">github.com/mikelikesbikes</a></li>
           </ul>
         </div>
         <div id="resume">
