--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -15,8 +15,8 @@
 <body>
   <div id="container" class="vcard">
     <div id="wrap">
-      <h1><a class="fn url" href="http://mikelikesbikes.com">Mike Busch</a></h1>
-      <h2 class="note">I am a <em>web developer</em> in Columbus, Ohio. Here is a little bit more about me.</h2>
+      <h1>Hi... I'm <a class="fn url" href="http://mikelikesbikes.com">Mike Busch</a>!</h1>
+      <h2 class="note">I'm a <em>web developer</em> in Columbus, Ohio. Here's a little bit more about me.</h2>
       <div id="tabs">
         <ul class="nav">
             <li><a href="#contact">Contact</a></li>
