added adr, email, and phone to hcard

--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -16,7 +16,7 @@
   <div id="container" class="vcard">
     <div id="wrap">
       <h1>Hi... I'm <a class="fn url" href="http://mikelikesbikes.com">Mike Busch</a>!</h1>
-      <h2 class="note">I'm a <em>web developer</em> in Columbus, Ohio. Here's a little bit more about me.</h2>
+      <h2 class="note">I'm a <em>web developer</em> in <span class="adr"><span class="locality">Columbus</span>, <span class="region">Ohio</span></span>. Here's a little bit more about me.</h2>
       <div id="tabs">
         <ul class="nav">
             <li><a href="#contact">Contact</a></li>
@@ -27,7 +27,7 @@
         </div>
         <div id="contact">
           <ul>
-            <li><a href="mailto:mike@mikelikesbikes.com" title="I answer email.">mike@mikelikesbikes.com</a></li>
+            <li><a href="mailto:mike@mikelikesbikes.com" title="I answer email." class="email">mike@mikelikesbikes.com</a></li>
             <li><a href="http://twitter.com/mikelikesbikes" title="I tweet frequently.">twitter.com/mikelikesbikes</a></li>
             <li><a href="http://www.linkedin.com/in/michaelbusch" title="I network with peers.">linkedin.com/in/michaelbusch</a></li>
             <li><a href="http://mikelikesbikes.com" title="I blog once in a while.">mikelikesbikes.com/blog</a></li>
@@ -35,6 +35,7 @@
             <li><a href="http://github.com/mikelikesbikes" title="I code in public.">github.com/mikelikesbikes</a></li>
             <li id="download_vcard"><a href="http://feeds.technorati.com/contacts/<%= home_url %>" title="Add me to your Address Book">My Card</a></li>
           </ul>
+          <div class="tel" class="hidden">(614)506-3327</div>
         </div>
       </div>
       <div id="elsewhere">
