hid phone number

--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -35,7 +35,7 @@
             <li><a href="http://github.com/mikelikesbikes" title="I code in public.">github.com/mikelikesbikes</a></li>
             <li id="download_vcard"><a href="http://feeds.technorati.com/contacts/<%= home_url %>" title="Add me to your Address Book">My Card</a></li>
           </ul>
-          <div class="tel" class="hidden">(614)506-3327</div>
+          <div class="tel hidden">(614)506-3327</div>
         </div>
       </div>
       <div id="elsewhere">
