resume style tweaks

--- a/app/views/home/_resume.html.erb
+++ b/app/views/home/_resume.html.erb
@@ -19,9 +19,13 @@
 
 <div id="experience" class="section">
   <h2>Experience</h2>
+  <h3>Toobla</h3>
+  <h4>Ruby on Rails/Front End Developer <span class="date">July 2009 - present</span></h4>
+  <p>Toobla is a Columbus based startup building a social media bookmarking tool. The product is part bookmarking and part social media mashup. As a developer on Toobla, I've been responsible for a good bit of front end coding, using the latest web standards, css3, and jQuery. I've also worked extremely closely with our lead developer building out backend systems using Ruby on Rails.</p>
+
   <h3>Cardinal Solutions Group</h3>
 
-  <h4>Staff Consultant, Columbus, OH <span class="date">June 2007 - Present</span></h4>
+  <h4>Staff Consultant, Columbus, OH <span class="date">June 2007 - June 2009</span></h4>
   <p>Cardinal Solutions Group is a leading Enterprise Solutions Consultancy in Ohio and North Carolina.
   As a Staff Consultant I was responsible for implementation of Java Web solutions for
   Cardinal's clients.</p>
@@ -47,13 +51,13 @@
   <h3>Languages, Libraries <span class="amp">&amp;</span> Frameworks</h3>
   <dl>
     <dt>Advanced</dt>
-    <dd><acronym title="Asynchronous Javascript + XML">AJAX</acronym>, <acronym title="Cascading Style Sheets">CSS</acronym>, Java, JavaScript, jQuery, <acronym title="JavaServer Pages">JSP</acronym>, Prototype, Struts, <acronym title="Structured Query Language">SQL</acronym>, <acronym title="Hypertext Markup Language">HTML</acronym>/<acronym title="Extensible Hypertext Markup Language">XHTML</acronym></dd>
+    <dd><acronym title="Asynchronous Javascript + XML">AJAX</acronym>, <acronym title="Cascading Style Sheets">CSS</acronym>, Java, JavaScript, jQuery, <acronym title="JavaServer Pages">JSP</acronym>, Prototype, Ruby/<abbr title="Ruby on Rails">Rails</abbr>, Struts, <acronym title="Structured Query Language">SQL</acronym>, <acronym title="Hypertext Markup Language">HTML</acronym>/<acronym title="Extensible Hypertext Markup Language">XHTML</acronym></dd>
 
     <dt>Intermediate</dt>
     <dd>C/C++/C#, <acronym title="Hypertext Preprocessor">PHP</acronym>, Spring, <acronym title="Universal Markup Language">UML</acronym>, <acronym title="Extensible Markup Language">XML</acronym>/<acronym title="Extensible Stylesheet Language">XSL</acronym>, <acronym title="Extensible Path Language">XPATH</acronym></dd>
-    <dt>Functional</dt>
 
-    <dd><abbr title="All Products under Microsoft's .NET Framework Umbrella">*.NET</abbr>, Ruby/Rails</dd>
+    <dt>Functional</dt>
+    <dd><abbr title="All Products under Microsoft's .NET Framework Umbrella">*.NET</abbr></dd>
   </dl>
 
   <h3>Software</h3>
@@ -62,14 +66,12 @@
     <dd><acronym title="Concurrent Versions System">CVS</acronym>, <abbr title="Subversion">SVN</abbr>, Git</dd>
 
     <dt>Development</dt>
-    <dd>Eclipse, NetBeans, emacs</dd>
+    <dd>TextMate, Eclipse, NetBeans, emacs</dd>
     <dt>Design:</dt>
     <dd>Adobe Photoshop</dd>
-    <dt>Productivity:</dt>
-    <dd>MS Office Suite, Lotus Notes <small>(I hate it too)</small></dd>
 
     <dt>Operating Systems</dt>
-    <dd>Windows 98/NT/XP/Vista, Mac OSX</dd>
+    <dd>Windows 98/NT/XP/Vista, Mac OS X</dd>
   </dl>
 
   <h3>Techniques</h3>
