--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -26,20 +26,18 @@
           <%= render :partial => 'home/resume' %>
         </div>
         <div id="contact">
+          <h2 class="hidden">Contact</h2>
           <ul>
-            <li><a href="mailto:mike@mikelikesbikes.com" title="I answer email." class="email">mike@mikelikesbikes.com</a></li>
-            <li><a href="http://twitter.com/mikelikesbikes" title="I tweet frequently.">twitter.com/mikelikesbikes</a></li>
-            <li><a href="http://www.linkedin.com/in/michaelbusch" title="I network with peers.">linkedin.com/in/michaelbusch</a></li>
-            <li><a href="http://mikelikesbikes.com" title="I blog once in a while.">mikelikesbikes.com/blog</a></li>
-            <li><a href="http://delicious.com/mikelikesbikes" title="I reading lots of news.">delicious.com/mikelikesbikes</a></li>
-            <li><a href="http://github.com/mikelikesbikes" title="I code in public.">github.com/mikelikesbikes</a></li>
-            <li id="download_vcard"><a href="http://feeds.technorati.com/contacts/<%= home_url %>" title="Add me to your Address Book">My Card</a></li>
+            <li><a href="mailto:mike@mikelikesbikes.com" title="I answer email." class="email">Email</a></li>
+            <li><a href="http://twitter.com/mikelikesbikes" title="I tweet frequently.">Twitter</a></li>
+            <li><a href="http://www.linkedin.com/in/michaelbusch" title="I network with peers.">LinkedIn</a></li>
+            <li><a href="http://mikelikesbikes.com" title="I blog once in a while.">My Blog</a></li>
+            <li><a href="http://delicious.com/mikelikesbikes" title="I reading lots of news.">Delicious</a></li>
+            <li><a href="http://github.com/mikelikesbikes" title="I code in public.">Github</a></li>
+            <li id="download_vcard"><a href="http://feeds.technorati.com/contacts/<%= home_url %>" title="Add me to your Address Book">My Card (click to download)</a></li>
+            <li class="hidden">Phone: <span class="tel">(614) 506-3327</span></li>
           </ul>
-          <div class="tel hidden">(614)506-3327</div>
         </div>
-      </div>
-      <div id="elsewhere">
-
       </div>
     </div>
     <div id="footer">
