--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -4,7 +4,7 @@ body {
 }
 
 .hidden {
-  display:none;
+  display:none !important;
 }
 
 #container {
@@ -118,12 +118,25 @@ h2 {
   font-weight: normal;
 }
 
+#resume h2 {
+  color:#999999;
+  font-size:1.25em;
+  font-variant:small-caps;
+  letter-spacing:0.2em;
+  margin:1.5em 0 0;
+  text-transform:lowercase;
+}
+
 h3 {
   font-size: 1.5em;
   line-height: 1.25em;
   margin: 1.5em 0 .5em;
   font-weight: bold;
   text-transform: uppercase;
+}
+
+#resume h3 {
+  margin:0.5em 0;
 }
 
 h4 {
