--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -45,6 +45,6 @@
     </div>
   </div>
 
-<% render :partial => 'shared/google_analytics' if RAILS_ENV == 'production' %>
+<%= render :partial => 'shared/google_analytics' if RAILS_ENV == 'production' %>
 </body>
 </html>
