--- a/app/views/home/_resume.html.erb
+++ b/app/views/home/_resume.html.erb
@@ -1,4 +1,5 @@
-<div id="overview" class="section">
+<a href="#mike_busch" class="include contact" title="Mike Busch"></a>
+<div id="overview" class="section summary">
   <h2>Overview</h2>
   <p>Analytical thought leader that delivers forward thinking
   solutions, and consistently meets budget constraints. Collaborative team
@@ -12,37 +13,59 @@
   <h2>Education</h2>
 
   <h3>The Ohio State University</h3>
-  <h4>B.S. in Computer Science <span class="amp">&amp;</span> Engineering, Business Minor <span class="date">June 2007</span></h4>
+  <h4>B.S. in Computer Science <span class="amp">&amp;</span> Engineering, Business Minor</h4>
+  <span class="date"><abbr class="dtstart dtend" title="2009-07-01">June 2007</abbr></span>
   <p>Major Coursework: Numerical Methods, Principles of Programming Languages, Computer Algorithms, Automata and Formal Languages, Operating Systems, Database Design/Implementation, Systems Analysis, Object Oriented Design, Web Services Capstone, Information Systems Capstone</p>
   <p>Minor Coursework: Operational Management, Accounting, Finance, Marketing, and Human Resources</p>
 </div>
 
 <div id="experience" class="section">
   <h2>Experience</h2>
-  <h3>Toobla</h3>
-  <h4>Ruby on Rails/Front End Developer <span class="date">July 2009 - present</span></h4>
-  <p>Toobla is a Columbus based startup building a social media bookmarking tool. The product is part bookmarking and part social media mashup. As a developer on Toobla, I've been responsible for a good bit of front end coding, using the latest web standards, css3, and jQuery. I've also worked extremely closely with our lead developer building out backend systems using Ruby on Rails.</p>
+  <ol class="vcalendar">
+    <li class="vevent experience">
+      <div class="vcard">
+        <a href="mike_busch" class="include" title="Mike Busch"></a>
+        <h3 class="org">Toobla</h3>
+        <h4 class="title">Ruby on Rails/Front End Developer</h4>
+        <span class="date"><abbr class="dtstart" title="2009-07-01">July 2009</abbr> - <abbr title="<%= Date.today.to_s %>">present</abbr></span>
+      </div>
 
-  <h3>Cardinal Solutions Group</h3>
+      <p>Toobla is a Columbus based startup building a social media bookmarking tool. The product is part bookmarking and part social media mashup. As a developer on Toobla, I've been responsible for a good bit of front end coding, using the latest web standards, css3, and jQuery. I've also worked extremely closely with our lead developer building out backend systems using Ruby on Rails.</p>
+    </li>
 
-  <h4>Staff Consultant, Columbus, OH <span class="date">June 2007 - June 2009</span></h4>
-  <p>Cardinal Solutions Group is a leading Enterprise Solutions Consultancy in Ohio and North Carolina.
-  As a Staff Consultant I was responsible for implementation of Java Web solutions for
-  Cardinal's clients.</p>
-  <p>Over the past 2 years I've worked with Cardinal's clients to develop:</p>
-  <ul>
-    <li>Robust <acronym title="Model View Controller">MVC</acronym> applications using Struts, Spring and Hibernate</li>
-    <li><acronym title="Rich Internet Application">RIA</acronym>s using standards compliant <acronym title="Extensible Hypertext Markup Language">XHTML</acronym>/<acronym title="Cascading Style Sheets">CSS</acronym> and unobtrusive Javascript</li>
+    <li class="vevent experience">
+      <div class="vcard">
+        <a href="mike_busch" class="include" title="Mike Busch"></a>
+        <h3 class="org">Cardinal Solutions Group</h3>
+        <h4 class="title">Staff Consultant, Columbus, OH</h4>
+        <span class="date"><abbr class="dtstart" title="2007-06-25">June 2007</abbr> - <abbr class="dtend" title="2009-06-31">June 2009</abbr></span>
+      </div>
 
-    <li>Agile capabilities including pair programming, test-driven development and lean software development</li>
-    <li>Code review sessions focused on middle and front tier development work</li>
-  </ul>
-  <p>I've also helped Cardinal create sales and training material around Struts and Agile concepts like <acronym title="Test Driven Development">TDD</acronym>.</p>
+      <p>Cardinal Solutions Group is a leading Enterprise Solutions Consultancy in Ohio and North Carolina.
+      As a Staff Consultant I was responsible for implementation of Java Web solutions for
+      Cardinal's clients.</p>
+      <p>Over the past 2 years I've worked with Cardinal's clients to develop:</p>
+      <ul>
+        <li>Robust <acronym title="Model View Controller">MVC</acronym> applications using Struts, Spring and Hibernate</li>
+        <li><acronym title="Rich Internet Application">RIA</acronym>s using standards compliant <acronym title="Extensible Hypertext Markup Language">XHTML</acronym>/<acronym title="Cascading Style Sheets">CSS</acronym> and unobtrusive Javascript</li>
 
-  <h3>Center for Entrepreneurship</h3>
-  <h4>Web Development Intern, Columbus, OH <span class="date">October 2005 - June 2007</span></h4>
+        <li>Agile capabilities including pair programming, test-driven development and lean software development</li>
+        <li>Code review sessions focused on middle and front tier development work</li>
+      </ul>
+      <p>I've also helped Cardinal create sales and training material around Struts and Agile concepts like <acronym title="Test Driven Development">TDD</acronym>.</p>
+    </li>
 
-  <p>The Center for Entrepreneurship is a department of the Fisher College of Business at The Ohio State University. As an intern at the Center I worked directly with the Center's Director to develop a new online presence. This included cleansing hundreds of pages of content and formatting it using clean semantic markup. I also lead an effort to develop a new system to help the Center administrate the Annual Fisher Business Plan Competition.</p>
+    <li class="vevent experience">
+      <div class="vcard">
+        <a href="mike_busch" class="include" title="Mike Busch"></a>
+        <h3 class="org">Center for Entrepreneurship</h3>
+        <h4 class="title">Web Development Intern, Columbus, OH</h4>
+        <span class="date"><abbr class="dtstart" title="2005-10-01">October 2005</abbr> - <abbr class="dtend" title="2007-06-01">June 2007</abbr></span>
+      </div>
+
+      <p>The Center for Entrepreneurship is a department of the Fisher College of Business at The Ohio State University. As an intern at the Center I worked directly with the Center's Director to develop a new online presence. This included cleansing hundreds of pages of content and formatting it using clean semantic markup. I also lead an effort to develop a new system to help the Center administrate the Annual Fisher Business Plan Competition.</p>
+    </li>
+  </ol>
 </div>
 <!-- // #experience -->
 
@@ -85,11 +108,10 @@
 <div id="extras" class="section">
   <h2>Associations</h2>
   <ul>
-    <li>Central Ohio Java User Group (<acronym>COJUG</acronym>) <span class="date">January 2008</span></li>
-    <li>Columbus Ruby Brigade (<acronym>CRB</acronym>) <span class="date">January 2008</span></li>
-
-    <li>Central Ohio .NET User Group (<acronym>CODNG</acronym>) <span class="date">November 2008</span></li>
-    <li>Columbus Javascript User Group (<acronym>cbusjs</acronym>) <span class="date">March 2009</span></li>
+    <li class="affiliation vcard"><span class="fn org">Central Ohio Java User Group (<acronym>COJUG</acronym>)</span> <span class="date">January 2008</span></li>
+    <li class="affiliation vcard"><span class="fn org">Columbus Ruby Brigade (<acronym>CRB</acronym>)</span> <span class="date">January 2008</span></li>
+    <li class="affiliation vcard"><span class="fn org">Central Ohio .NET User Group (<acronym>CODNG</acronym>)</span> <span class="date">November 2008</span></li>
+    <li class="affiliation vcard"><span class="fn org">Columbus Javascript User Group (<acronym>cbusjs</acronym>)</span> <span class="date">March 2009</span></li>
   </ul>
 </div>
 
