--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -13,8 +13,8 @@
   <script src="/javascripts/homepage.js" type="text/javascript"></script>
 </head>
 <body>
-  <div id="container" class="vcard">
-    <div id="wrap">
+  <div id="container">
+    <div id="mike_busch" class="vcard">
       <h1>Hi... I'm <a class="fn url" href="http://mikelikesbikes.com">Mike Busch</a>!</h1>
       <h2 class="note">I'm a <em>web developer</em> in <span class="adr"><span class="locality">Columbus</span>, <span class="region">Ohio</span></span>. Here's a little bit more about me.</h2>
       <div id="tabs">
@@ -22,7 +22,7 @@
             <li><a href="#contact">Contact</a></li>
             <li><a href="#resume">Resume</a></li>
         </ul>
-        <div id="resume">
+        <div id="resume" class="hresume">
           <%= render :partial => 'home/resume' %>
         </div>
         <div id="contact">
