--- a/public/stylesheets/reset.css
+++ b/public/stylesheets/reset.css
@@ -63,14 +63,41 @@ h1 {
 
 h2 {
   font-size:1.25em;
-  margin-bottom:1em;
+  margin:1em 0em 0.5em;
 }
+
 p {
   margin-bottom:1em;
 }
 em {
   font-style:italic;
 }
+
+dd {
+  padding-left:2em;
+}
+
+ul, ol {
+  padding-left:2em;
+  margin-bottom:1em;
+}
+
+ul {
+  list-style-type:disc;
+}
+
+ol {
+  list-stype-type:decimal;
+}
+
+li {
+  padding-left:0.5em;
+}
+
+acronym[title], abbr[title] {
+  border-bottom:1px dotted #333333;
+}
+
 .clear {
   clear: both;
   display:block;
