--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -8,6 +8,7 @@
   <title>Mike Busch</title>
   <link rel="stylesheet" href="/stylesheets/reset.css" type="text/css" media="all" />
   <link rel="stylesheet" href="/stylesheets/homepage.css" type="text/css" media="all" />
+  <link rel="stylesheet" href="/stylesheets/print.css" type="text/css" media="print" />
   <script src="/javascripts/jquery.min.js" type="text/javascript"></script>
   <script src="/javascripts/jquery-ui.min.js" type="text/javascript"></script>
   <script src="/javascripts/homepage.js" type="text/javascript"></script>
@@ -28,14 +29,14 @@
         <div id="contact">
           <h2 class="hidden">Contact</h2>
           <ul>
-            <li><a href="mailto:mike@mikelikesbikes.com" title="I answer email." class="email">Email</a></li>
+            <li class="print"><a href="mailto:mike@mikelikesbikes.com" title="I answer email." class="email">Email: busch.michael@gmail.com</a></li>
             <li><a href="http://twitter.com/mikelikesbikes" title="I tweet frequently.">Twitter</a></li>
             <li><a href="http://www.linkedin.com/in/michaelbusch" title="I network with peers.">LinkedIn</a></li>
             <li><a href="http://mikelikesbikes.com" title="I blog once in a while.">My Blog</a></li>
             <li><a href="http://delicious.com/mikelikesbikes" title="I reading lots of news.">Delicious</a></li>
             <li><a href="http://github.com/mikelikesbikes" title="I code in public.">Github</a></li>
+            <li class="hidden print">Phone: <span class="tel">(614) 506-3327</span></li>
             <li id="download_vcard"><a href="http://feeds.technorati.com/contacts/<%= home_url %>" title="Add me to your Address Book">My Card (click to download)</a></li>
-            <li class="hidden">Phone: <span class="tel">(614) 506-3327</span></li>
           </ul>
         </div>
       </div>
