changed overview... fuck corporate speak

--- a/app/views/home/_resume.html.erb
+++ b/app/views/home/_resume.html.erb
@@ -1,12 +1,7 @@
 <a href="#mike_busch" class="include contact" title="Mike Busch"></a>
 <div id="overview" class="section summary">
   <h2>Overview</h2>
-  <p>Analytical thought leader that delivers forward thinking
-  solutions, and consistently meets budget constraints. Collaborative team
-  player who works effectively with project stakeholders, and influences
-  decisions through communication and attention to detail. Creative
-  designer and developer, with an understanding of the alignment of
-  creative and business goals.</p>
+  <p>I'm a web developer, who loves creating beautiful, highly interactive websites. I'm focused on using the latest software development tools (Ruby on Rails), process (Scrum and Kanban), and techniques (Test Driven Development, Continuous Integration, etc).</p>
 </div>
 
 <div id="education" class="section">
