--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -5,6 +5,8 @@
 <head>
   <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
 
+  <%= open_id_tags if request.url == root_url %>
+
   <title>Mike Busch</title>
   <link rel="stylesheet" href="/stylesheets/reset.css" type="text/css" media="all" />
   <link rel="stylesheet" href="/stylesheets/homepage.css" type="text/css" media="all" />
