--- a/public/sandbox/reset.css
+++ b/public/sandbox/reset.css
@@ -1,77 +1,52 @@
+/* http://meyerweb.com/eric/tools/css/reset/ */
+/* v1.0 | 20080212 */
+
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
 del, dfn, em, font, img, ins, kbd, q, s, samp,
 small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
 dl, dt, dd, ol, ul, li,
 fieldset, form, label, legend,
 table, caption, tbody, tfoot, thead, tr, th, td {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  outline: 0;
-  font-weight: inherit;
-  font-style: inherit;
-  font-size: 100%;
-  font-family: inherit;
-  vertical-align: baseline;
+	margin: 0;
+	padding: 0;
+	border: 0;
+	outline: 0;
+	vertical-align: baseline;
+	background: transparent;
 }
 body {
-  padding:1em;
-  line-height: 1;
-  color: #000;
-  background: #fff;
+	line-height: 1;
 }
 ol, ul {
-  list-style: none;
+	list-style: none;
 }
-/* tables still need 'cellspacing="0"' in the markup */
-table {
-  border-collapse: separate;
-  border-spacing: 0;
-}
-caption, th, td {
-  text-align: left;
-  font-weight: normal;
+blockquote, q {
+	quotes: none;
 }
 blockquote:before, blockquote:after,
 q:before, q:after {
-  content: "";
-}
-blockquote, q {
-  quotes: "" "";
-}
-a img, input[type="image"] { border: none; }
-.clearfix:after {
-  content: ".";
-  display: block;
-  height: 0;
-  clear :both;
-  visibility: hidden;
+	content: '';
+	content: none;
 }
 
-body {
-  background:#FFF;
-  font-family:"Lucida Grande", Arial, sans-serif;
-  color:#333;
+/* Don't kill focus outline for keyboard users: http://24ways.org/2009/dont-lose-your-focus */
+a:hover, a:active {
+    outline: none;
 }
 
-h1 {
-  font-size:1.5em;
-  margin-bottom:1em;
+/* remember to highlight inserts somehow! */
+ins {
+	text-decoration: none;
+}
+del {
+	text-decoration: line-through;
 }
 
-h2 {
-  font-size:1.25em;
-  margin-bottom:1em;
-}
-p {
-  margin-bottom:1em;
-}
-em {
-  font-style:italic;
-}
-.clear {
-  clear: both;
-  display:block;
+/* tables still need 'cellspacing="0"' in the markup */
+table {
+	border-collapse: collapse;
+	border-spacing: 0;
 }
