lots of updates

--- a/app/views/home/_resume.html.erb
+++ b/app/views/home/_resume.html.erb
@@ -1,7 +1,7 @@
 <a href="#mike_busch" class="include contact" title="Mike Busch"></a>
 <div id="overview" class="section summary">
   <h2>Overview</h2>
-  <p>I'm a web developer, who loves creating beautiful, highly interactive websites. I'm focused on using the latest software development tools (Ruby on Rails), process (Scrum and Kanban), and techniques (Test Driven Development, Continuous Integration, etc).</p>
+  <p>I'm a web developer, who loves crafting beautiful, highly interactive websites. I'm focused on using the latest software development tools (Ruby on Rails), process (Scrum and Kanban), and techniques (Test Driven Development, Continuous Integration, etc).</p>
 </div>
 
 <div id="education" class="section">
@@ -22,10 +22,14 @@
         <a href="mike_busch" class="include" title="Mike Busch"></a>
         <h3 class="org">Toobla</h3>
         <h4 class="title">Ruby on Rails/Front End Developer</h4>
-        <span class="date"><abbr class="dtstart" title="2009-07-01">July 2009</abbr> - <abbr title="<%= Date.today.to_s %>">present</abbr></span>
+        <span class="date"><abbr class="dtstart" title="2009-07-01">July 2009</abbr> - <abbr title="2010-01-25">January 2010</abbr></span>
       </div>
 
-      <p>Toobla is a Columbus based startup building a social media bookmarking tool. The product is part bookmarking and part social media mashup. As a developer on Toobla, I've been responsible for a good bit of front end coding, using the latest web standards, css3, and jQuery. I've also worked extremely closely with our lead developer building out backend systems using Ruby on Rails.</p>
+      <p>
+        Toobla is an early stage social media startup, developing an application for collecting, sharing and discovering web content in a visual way.
+      </p>
+      <p>Toobla was my first professional exposure to Ruby and Ruby on Rails, as well as <acronym title="Test Driven Development">TDD</acronym> with RSpec and Cucumber. My primary focus at Toobla was building out the UI layer of the application; including heavy use of haml, <acronym title="Extensible Hypertext Markup Language">XHTML</acronym>, <acronym title="Cascading Style Sheets">CSS</acronym> (no sass :( ), and copious amounts of unobtrusive jquery.</p>
+      <p>Toobla also afforded us the opportunity to use and occassionally contribute to the vibrant open source community on github.</p>
     </li>
 
     <li class="vevent experience">
@@ -78,19 +82,14 @@
     <dd><abbr title="All Products under Microsoft's .NET Framework Umbrella">*.NET</abbr></dd>
   </dl>
 
-  <h3>Software</h3>
-  <dl>
-    <dt>Source Control:</dt>
-    <dd><acronym title="Concurrent Versions System">CVS</acronym>, <abbr title="Subversion">SVN</abbr>, Git</dd>
-
-    <dt>Development</dt>
-    <dd>TextMate, Eclipse, NetBeans, emacs</dd>
-    <dt>Design:</dt>
-    <dd>Adobe Photoshop</dd>
-
-    <dt>Operating Systems</dt>
-    <dd>Windows 98/NT/XP/Vista, Mac OS X</dd>
-  </dl>
+  <h3>My Dev Enviroment</h3>
+  <ul>
+    <li>MacBook Pro (OS X 10.5)</li>
+    <li>Terminal (bash)</li>
+    <li>TextMate (vim if I'm forced)</li>
+    <li>Firefox (plus Firebug)</li>
+    <li>Git</li>
+  </ul>
 
   <h3>Techniques</h3>
   <dl>
