--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -18,13 +18,14 @@
 <body>
   <div id="container">
     <div id="mike_busch" class="vcard">
-      <h1>Hi... I'm <a class="fn url" href="http://mikelikesbikes.com">Mike Busch</a>!</h1>
-      <h2 class="note">I'm a <em>web developer</em> in <span class="adr"><span class="locality">Columbus</span>, <span class="region">Ohio</span></span>. Here's a little bit more about me.</h2>
-      <div id="tabs">
-        <ul class="nav">
-            <li><a href="#contact">Contact</a></li>
-            <li><a href="#resume">Resume</a></li>
-        </ul>
+      <ul class="nav">
+          <li><a href="#contact">Contact</a></li>
+          <li><a href="#resume">Resume</a></li>
+      </ul>
+      <div id="wrap">
+
+        <h1>Hi... I'm <a class="fn url" href="http://mikelikesbikes.com">Mike Busch</a>!</h1>
+        <h2 class="note">I'm a <em>web developer</em> in <span class="adr"><span class="locality">Columbus</span>, <span class="region">Ohio</span></span>. Here's a little bit more about me.</h2>
         <div id="resume" class="hresume">
           <%= render :partial => 'home/resume' %>
         </div>
@@ -43,6 +44,7 @@
         </div>
       </div>
     </div>
+    <div id="shadow_fix"></div>
     <div id="footer">
       &copy; <a href="http://mikelikesbikes.com/">Mike Busch</a> <%= Date.today.year %>
     </div>
