--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -46,7 +46,7 @@
     </div>
     <div id="shadow_fix"></div>
     <div id="footer">
-      &copy; <a href="http://mikelikesbikes.com/">Mike Busch</a> <%= Date.today.year %>
+      &copy; <%= link_to "Mike Busch", "http://mikelikesbikes.com/" %> <%= Date.today.year %>. Proudly hosted on <%= link_to "Heroku", "http://heroku.com/" %>.
     </div>
   </div>
 
