some minor changes

--- a/app/views/home/_resume.html.erb
+++ b/app/views/home/_resume.html.erb
@@ -1,17 +1,7 @@
 <a href="#mike_busch" class="include contact" title="Mike Busch"></a>
 <div id="overview" class="section summary">
   <h2>Overview</h2>
-  <p>I'm a web developer, who loves crafting beautiful, highly interactive websites. I'm focused on using the latest software development tools (Ruby on Rails), process (Scrum and Kanban), and techniques (Test Driven Development, Continuous Integration, etc).</p>
-</div>
-
-<div id="education" class="section">
-  <h2>Education</h2>
-
-  <h3>The Ohio State University</h3>
-  <h4>B.S. in Computer Science <span class="amp">&amp;</span> Engineering, Business Minor</h4>
-  <span class="date"><abbr class="dtstart dtend" title="2009-07-01">June 2007</abbr></span>
-  <p>Major Coursework: Numerical Methods, Principles of Programming Languages, Computer Algorithms, Automata and Formal Languages, Operating Systems, Database Design/Implementation, Systems Analysis, Object Oriented Design, Web Services Capstone, Information Systems Capstone</p>
-  <p>Minor Coursework: Operational Management, Accounting, Finance, Marketing, and Human Resources</p>
+  <p>I'm a web developer, who loves crafting beautiful, highly interactive websites. I'm focused on using the latest software development tools (Ruby on Rails), process (Scrum and Kanban), and techniques (Test Driven Development, Continuous Integration, etc). And I want to work with and learn from the best talent in our industry, be it professionally or in the open source community.</p>
 </div>
 
 <div id="experience" class="section">
@@ -20,9 +10,18 @@
     <li class="vevent experience">
       <div class="vcard">
         <a href="mike_busch" class="include" title="Mike Busch"></a>
+        <h3 class="org">Pillar Technology</h3>
+        <h4 class="title">Java/Front End Developer, Dayton, OH</h4>
+        <span class="date"><abbr class="dtstart" title="2010-01-26">January 2010</abbr> - <abbr title="<%= Date.today %>">present</abbr></span>
+      </div>
+      <p></p>
+    </li>
+    <li class="vevent experience">
+      <div class="vcard">
+        <a href="mike_busch" class="include" title="Mike Busch"></a>
         <h3 class="org">Toobla</h3>
-        <h4 class="title">Ruby on Rails/Front End Developer</h4>
-        <span class="date"><abbr class="dtstart" title="2009-07-01">July 2009</abbr> - <abbr title="2010-01-25">January 2010</abbr></span>
+        <h4 class="title">Ruby on Rails/Front End Developer, Columbus, OH</h4>
+        <span class="date"><abbr class="dtstart" title="2009-07-01">July 2009</abbr> - <abbr class="dtend" title="2010-01-25">January 2010</abbr></span>
       </div>
 
       <p>
@@ -67,6 +66,16 @@
   </ol>
 </div>
 <!-- // #experience -->
+
+<div id="education" class="section">
+  <h2>Education</h2>
+
+  <h3>The Ohio State University</h3>
+  <h4>B.S. in Computer Science <span class="amp">&amp;</span> Engineering, Business Minor</h4>
+  <span class="date"><abbr class="dtstart dtend" title="2009-07-01">June 2007</abbr></span>
+  <p>Major Coursework: Numerical Methods, Principles of Programming Languages, Computer Algorithms, Automata and Formal Languages, Operating Systems, Database Design/Implementation, Systems Analysis, Object Oriented Design, Web Services Capstone, Information Systems Capstone</p>
+  <p>Minor Coursework: Operational Management, Accounting, Finance, Marketing, and Human Resources</p>
+</div>
 
 <div id="skills" class="section">
   <h2>Skills</h2>
