--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -35,6 +35,7 @@
             <li class="print"><a href="mailto:mike@mikelikesbikes.com" title="I answer email." class="email">Email: busch.michael@gmail.com</a></li>
             <li><a href="http://twitter.com/mikelikesbikes" title="I tweet frequently.">Twitter</a></li>
             <li><a href="http://www.linkedin.com/in/michaelbusch" title="I network with peers.">LinkedIn</a></li>
+            <!-- <li><a href="skype:m1kelikesbikes?call" title="I have conversations.">Skype</a></li> -->
             <li><a href="http://mikelikesbikes.com" title="I blog once in a while.">My Blog</a></li>
             <li><a href="http://delicious.com/mikelikesbikes" title="I reading lots of news.">Delicious</a></li>
             <li><a href="http://github.com/mikelikesbikes" title="I code in public.">Github</a></li>
