--- a/public/stylesheets/homepage.css
+++ b/public/stylesheets/homepage.css
@@ -31,7 +31,7 @@ body {
   padding:2.5em 2.5em 1.5em;
   background:#fdfdfd;
   -moz-box-shadow: rgba(0,0,0,0.5) 0px 2px 10px 2px;
-  -webkit-box-shadow: rgba(0,0,0,0.5) 0px 2px 10px 2px;
+  -webkit-box-shadow: rgba(0,0,0,0.5) 0px 2px 10px;
 }
 
 #footer {
@@ -77,7 +77,7 @@ body {
   font-weight:bold;
   padding:0.75em 0.75em 0.5em;
   -moz-box-shadow: rgba(0,0,0,0.5) 0px 2px 10px 2px;
-  -webkit-box-shadow: rgba(0,0,0,0.5) 0px 2px 10px 2px;
+  -webkit-box-shadow: rgba(0,0,0,0.5) 0px 2px 10px;
 }
 
 .nav .ui-tabs-selected a {
@@ -211,6 +211,7 @@ span.amp {
   float:right;
   display:inline-block;
   font-size:75%;
+  line-height:24px;
   font-style: italic;
   color:#999999;
 }
@@ -278,6 +279,10 @@ dt {
 #contact a[href*=linkedin] {
   background:url(/images/icons/linkedin.png) no-repeat top left;
 }
+/*
+#contact a[href^=skype] {
+  background:url(/images/icons/linkedin.png) no-repeat top left;
+}*/
 
 #contact a[href*=twitter] {
   background:url(/images/icons/twitter.png) no-repeat top left;
