reorg, lots of resume changes

--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -27,10 +27,10 @@
         <h1>Hi... I'm <a class="fn url" href="http://mikelikesbikes.com">Mike Busch</a>!</h1>
         <h2 class="note">I'm a <em>web developer</em> in <span class="adr"><span class="locality">Columbus</span>, <span class="region">Ohio</span></span>. Here's a little bit more about me.</h2>
         <div id="resume" class="hresume">
-          <%= render :partial => 'home/resume' %>
+          <%= render :partial => 'resume/resume' %>
         </div>
         <div id="contact">
-          <h2 class="hidden">Contact</h2>
+          <h2 class="hidden">Let's Talk</h2>
           <ul>
             <li class="print"><a href="mailto:mike@mikelikesbikes.com" title="I answer email." class="email">Email: busch.michael@gmail.com</a></li>
             <li><a href="http://twitter.com/mikelikesbikes" title="I tweet frequently.">Twitter</a></li>
