--- a/public/stylesheets/print.css
+++ b/public/stylesheets/print.css
@@ -13,7 +13,7 @@ body {
   display:block;
 }
 
-.ui-tabs .nav, #footer {
+.ui-tabs .nav, #footer, .note {
   display:none;
 }
 
@@ -22,6 +22,10 @@ body {
   -moz-box-shadow: none;
   -webkit-box-shadow: none;
   background:none;
+}
+
+#contact {
+  display:block;
 }
 
 #contact h2.hidden {
@@ -49,6 +53,7 @@ body {
 
 .date {
   font-size:1em;
+  line-height:1em;
 }
 
 a {
