--- a/app/views/resume/sections/_extras.html.erb
+++ b/app/views/resume/sections/_extras.html.erb
@@ -4,8 +4,8 @@
     <li class="affiliation vcard"><span class="fn org">Central Ohio Agile Association (<acronym>COHAA</acronym>)</span> <span class="date">April 207</span></li>
     <li class="affiliation vcard"><span class="fn org">Central Ohio Java User Group (<acronym>COJUG</acronym>)</span> <span class="date">January 2008</span></li>
     <li class="affiliation vcard"><span class="fn org">Columbus Ruby Brigade (<acronym>CRB</acronym>)</span> <span class="date">January 2008</span></li>
-    <li class="affiliation vcard"><span class="fn org">Central Ohio .NET User Group (<acronym>CODNG</acronym>)</span> <span class="date">November 2008</span></li>
+<!--    <li class="affiliation vcard"><span class="fn org">Central Ohio .NET User Group (<acronym>CODNG</acronym>)</span> <span class="date">November 2008</span></li>-->
     <li class="affiliation vcard"><span class="fn org">Columbus Javascript User Group (<acronym>cbusjs</acronym>)</span> <span class="date">March 2009</span></li>
-    <li class="affiliation vcard"><span class="fn org"><a href="http://www.columbusgivecamp.org/" class="url">GiveCamp Columbus</a></span> <span class="date">July 2009 &amp; July 2010</span></li>
+<!--    <li class="affiliation vcard"><span class="fn org"><a href="http://www.columbusgivecamp.org/" class="url">GiveCamp Columbus</a></span> <span class="date">July 2009 &amp; July 2010</span></li>-->
   </ul>
 </div>
