--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -25,7 +25,7 @@
       <div id="wrap">
 
         <h1>Hi... I'm <a class="fn url" href="http://mikelikesbikes.com">Mike Busch</a>!</h1>
-        <h2 class="note">I'm a <em>web developer</em> in <span class="adr"><span class="locality">Columbus</span>, <span class="region">Ohio</span></span>. Here's a little bit more about me.</h2>
+        <h2 class="note">I'm a <em>software engineer</em> in <span class="adr"><span class="locality">Chicago</span>, <span class="region">Illinois</span></span>. Here's a little bit more about me.</h2>
         <div id="resume" class="hresume">
           <%= render :partial => 'resume/resume' %>
         </div>
@@ -36,7 +36,7 @@
             <li><a href="http://twitter.com/mikelikesbikes" title="I tweet frequently.">Twitter</a></li>
             <li><a href="http://www.linkedin.com/in/michaelbusch" title="I network with peers.">LinkedIn</a></li>
             <!-- <li><a href="skype:m1kelikesbikes?call" title="I have conversations.">Skype</a></li> -->
-            <li><a href="http://mikelikesbikes.com" title="I blog once in a while.">My Blog</a></li>
+            <!--li><a href="http://mikelikesbikes.com" title="I blog once in a while.">My Blog</a></li-->
             <li><a href="http://delicious.com/mikelikesbikes" title="I reading lots of news.">Delicious</a></li>
             <li><a href="http://github.com/mikelikesbikes" title="I code in public.">Github</a></li>
             <li class="hidden print">Phone: <span class="tel">(614) 506-3327</span></li>
