--- a/app/views/resume/sections/_experience.html.erb
+++ b/app/views/resume/sections/_experience.html.erb
@@ -4,9 +4,25 @@
     <li class="vevent experience">
       <div class="vcard">
         <a href="mike_busch" class="include" title="Mike Busch"></a>
+        <h3 class="org">Groupon</h3>
+        <h4 class="title">Software Engineer</h4>
+        <span class="date"><abbr class="dtstart" title="2010-09-29">January 2011</abbr> - <abbr title="<%= Date.today %>">present</abbr></span>
+      </div>
+    </li>
+    <li class="vevent experience">
+      <div class="vcard">
+        <a href="mike_busch" class="include" title="Mike Busch"></a>
+        <h3 class="org">Obtiva</h3>
+        <h4 class="title">Software Engineer</h4>
+        <span class="date"><abbr class="dtstart" title="2010-09-29">September 2010</abbr> - <abbr class="dtend" title="2010-01-25">August 2011</abbr></span>
+      </div>
+    </li>
+    <li class="vevent experience">
+      <div class="vcard">
+        <a href="mike_busch" class="include" title="Mike Busch"></a>
         <h3 class="org">Pillar Technology</h3>
         <h4 class="title">Java/Front End Developer, Dayton, OH</h4>
-        <span class="date"><abbr class="dtstart" title="2010-01-26">January 2010</abbr> - <abbr title="<%= Date.today %>">present</abbr></span>
+        <span class="date"><abbr class="dtstart" title="2010-01-26">January 2010</abbr> - <abbr class="dtend" title="2010-09-11">August 2010</abbr></span>
       </div>
       <p>At Pillar I had the opportunity to work on a small team developing high value, customer facing web interfaces for one of our client's current paper based systems.</p>
       <ul>
