--- a/app/views/resume/sections/_skills.html.erb
+++ b/app/views/resume/sections/_skills.html.erb
@@ -18,10 +18,10 @@
 
   <h3>Development Enviroment</h3>
   <ul>
-    <li>&#63743; MacBook Pro (OS X 10.5)</li>
+    <li>&#63743; MacBook Pro (OS X 10.6)</li>
     <li><a href="http://github.com/mikelikesbikes/dotfiles/">bash</a></li>
-    <li>TextMate</li>
-    <li>Firefox (plus Firebug)</li>
+    <li>vim</li>
+    <li>Chrome</li>
     <li>Git/<a href="http://github.com/mikelikesbikes/">Github</a></li>
     <li>Photoshop CS4</li>
   </ul>
