--- a/app/views/layouts/homepage.html.erb
+++ b/app/views/layouts/homepage.html.erb
@@ -51,6 +51,6 @@
     </div>
   </div>
 
-<%= render :partial => 'shared/google_analytics' if RAILS_ENV == 'production' %>
+<%= render :partial => 'shared/google_analytics' if Rails.env == 'production' %>
 </body>
 </html>
