--- a/_includes/resume/experience.html
+++ b/_includes/resume/experience.html
@@ -1,12 +1,22 @@
+{% capture present %}{{ site.time | date: "%Y-%m-%d" }}{% endcapture %}
+
 <div id="experience" class="section">
   <h2>Experience</h2>
   <ol class="vcalendar">
     <li class="vevent experience">
       <div class="vcard">
         <a href="mike_busch" class="include" title="Mike Busch"></a>
+        <h3 class="org">Dev Bootcamp</h3>
+        <h4 class="title">Software Engineering Instructor</h4>
+        <span class="date"><abbr class="dtstart" title="2013-03-28">March 2013</abbr> - <abbr title="{{ present }}">present</abbr></span>
+      </div>
+    </li>
+    <li class="vevent experience">
+      <div class="vcard">
+        <a href="mike_busch" class="include" title="Mike Busch"></a>
         <h3 class="org">Groupon</h3>
         <h4 class="title">Software Engineer</h4>
-        <span class="date"><abbr class="dtstart" title="2010-09-29">January 2011</abbr> - <abbr title="<%= Date.today %>">present</abbr></span>
+        <span class="date"><abbr class="dtstart" title="2011-01-09">January 2011</abbr> - <abbr class="dtend" title="2013-03-15">March 2013</abbr></span>
       </div>
     </li>
     <li class="vevent experience">
@@ -14,7 +24,7 @@
         <a href="mike_busch" class="include" title="Mike Busch"></a>
         <h3 class="org">Obtiva</h3>
         <h4 class="title">Software Engineer</h4>
-        <span class="date"><abbr class="dtstart" title="2010-09-29">September 2010</abbr> - <abbr class="dtend" title="2010-01-25">August 2011</abbr></span>
+        <span class="date"><abbr class="dtstart" title="2010-09-29">September 2010</abbr> - <abbr class="dtend" title="2011-09-06">August 2011</abbr></span>
       </div>
     </li>
     <li class="vevent experience">
