hosted on github

--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -22,7 +22,7 @@
     {{ content }}
 
     <div id="footer">
-      &copy; <a href="http://mikelikesbikes.com/">mikelikesbikes.com</a> {{ site.time | date: "%Y" }}. Proudly hosted on <a href="http://heroku.com/">Heroku</a>.
+      &copy; <a href="http://mikelikesbikes.com/">mikelikesbikes.com</a> {{ site.time | date: "%Y" }}. Proudly hosted on <a href="http://github.com/">Github</a>.
     </div>
   </div>
 
