--- a/_layouts/homepage.html
+++ b/_layouts/homepage.html
@@ -13,13 +13,29 @@
   <link rel="stylesheet" href="/stylesheets/reset.css" type="text/css" media="all" />
   <link rel="stylesheet" href="/stylesheets/homepage.css" type="text/css" media="all" />
   <link rel="stylesheet" href="/stylesheets/print.css" type="text/css" media="print" />
+  <!--
   <script src="/javascripts/jquery.min.js" type="text/javascript"></script>
   <script src="/javascripts/jquery-ui.min.js" type="text/javascript"></script>
   <script src="/javascripts/homepage.js" type="text/javascript"></script>
+  -->
 </head>
 <body>
   <div id="container">
-    {{ content }}
+    {% include navigation.html %}
+
+    <div id="mike_busch" class="vcard">
+      <div id="wrap">
+        <h1>Hi... I'm <a class="fn url" href="http://mikelikesbikes.com">Mike Busch</a>!</h1>
+        <h2 class="note">
+          I'm a <em>software engineer</em> in <span class="adr"><span class="locality">Chicago</span>, <span class="region">Illinois</span></span>. Here's a little bit more about me.
+        </h2>
+
+        {{ content }}
+
+      </div>
+    </div>
+
+    <div id="shadow_fix"></div>
 
     <div id="footer">
       &copy; <a href="http://mikelikesbikes.com/">mikelikesbikes.com</a> {{ site.time | date: "%Y" }}. Proudly hosted on <a href="http://github.com/">Github</a>.
