--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -80,7 +80,7 @@ body {
   -webkit-box-shadow: rgba(0,0,0,0.5) 0px 2px 10px;
 }
 
-.nav .ui-tabs-selected a {
+.nav .active a {
   z-index:3;
   background: #fdfdfd;
 }
