stop flash-of-CRAZY-fucking orange

--- a/stylesheets/homepage.css
+++ b/stylesheets/homepage.css
@@ -10,7 +10,7 @@
 
 
 body {
-  background:#F26101 url(/images/oak-wood-washed.jpg) repeat;
+  background:rgb(214, 152, 111) url(/images/oak-wood-washed.jpg) repeat;
   text-align: center;
 }
 
